# DeNSE

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  INSTALL  README.md  Remarks.md  cli-netgrowth  format_cpp.sh  install_arch.sh  install_centos.sh  install_cygwin.sh  install_debian.sh  install_linux.sh  install_macos.sh  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
cmake/: ConfigureSummary.cmake  FindCython.cmake  FindGEOS.cmake  GetTriple.cmake  ProcessOptions.cmake  UseCython.cmake
culture/: Audric.dxf
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  conf_helpers.py  conf_rtd.py  index.rst  pg_mock.py  requirements.txt
docs/_templates/: customtoc.html  layout.html
docs/dense_theme/: theme.conf
docs/devel/: __future__.rst  architecture.rst  cpp_api.rst  (+9 more)
examples/: 2chambers.py  Net.py  RenaudAngles.py  diode.py  diode_env_test.py  lateral_branching.py  process_graph.py  random_walk.py  recorders.py  run_phd.ijm  several_step_growth.py  spatial_networks_activity_Tanguy.py  test_areas.py
extra/: copyright_header.cpp  copyright_header.py  headers.py  install_arch.sh  install_centos.sh  install_debian.sh  install_linux.sh  install_macos.sh  install_windows.cmd  set_dense_vars.sh.in
src/: CMakeLists.txt  README.md  format_cpp.sh  growth.cpp  module.cpp  module.hpp
src/cmake/: ConfigureSummary.cmake  FindCython.cmake  FindGEOS.cmake  FindSphinx.cmake  ProcessOptions.cmake  UseCython.cmake
src/docs/: CMakeLists.txt
src/docs/devel/: __future__.rst  branching_angle.rst  implementation.rst  recording.rst
src/docs/netgrowth_theme/: theme.conf
src/docs/netgrowth_theme/static/: netgrowth_theme.css
src/docs/user/: critical_resource_model.rst  elongation_models.rst  main.rst  neuron_models.rst  save_data.rst
src/elements/: Branch.cpp  Branch.hpp  Branching.cpp  Branching.hpp  CMakeLists.txt  GrowthCone.cpp  GrowthCone.hpp  Neurite.cpp  Neurite.hpp  Neuron.cpp  Neuron.hpp  Node.cpp  Node.hpp
src/io/: CMakeLists.txt  Skeleton.cpp  Skeleton.hpp  Swc.cpp  Swc.hpp
src/kernel/: CMakeLists.txt  kernel_manager.cpp  kernel_manager.hpp  manager_interface.hpp  neuron_manager.cpp  neuron_manager.hpp  parallelism_manager.cpp  parallelism_manager.hpp  record_manager.cpp  record_manager.hpp  recorders.cpp  recorders.hpp  rng_manager.cpp  rng_manager.hpp  simulation_manager.cpp  simulation_manager.hpp  space_manager.cpp  space_manager.hpp
src/libgrowth/: CMakeLists.txt  config.cpp  config.hpp.in  config_impl.hpp  cstr.hpp  cttrie.hpp  cttrie_sw256.tcc  elements_types.hpp  exceptions.cpp  exceptions.hpp  getindex.hpp  growth_names.cpp  growth_names.hpp  growth_space.cpp  growth_space.hpp  growth_time.cpp  growth_time.hpp  spatial_types.cpp  spatial_types.hpp  spatial_types.hpp.in  stringview.hpp  tools.hpp
src/models/: ActinWave.cpp  ActinWave.hpp  CMakeLists.txt  complete_gc_model.hpp  cst_elongation.hpp  direction_select_interface.hpp  direction_select_nm.cpp  direction_select_nm.hpp  direction_select_nwa.cpp  direction_select_nwa.hpp  direction_select_rt.cpp  direction_select_rt.hpp  elongation_cst.hpp  elongation_gfluct.cpp  elongation_interface.hpp  elongation_resource_based.cpp  elongation_resource_based.hpp  extension_cst.hpp  extension_gfluct.cpp  extension_gfluct.hpp  extension_interface.hpp  extension_resource_based.cpp  extension_resource_based.hpp  gc_critical.cpp  gc_critical.hpp  gc_dir_el.cpp  gc_dir_el.hpp  gc_random_walk.cpp  gc_random_walk.hpp  gc_run_tumble.cpp  gc_run_tumble.hpp  gc_self_referential_forces.cpp  gc_self_referential_forces.hpp  gfluct_elongation.cpp  gfluct_elongation.hpp  memory_based_steering.cpp  memory_based_steering.hpp  models_generator.py  models_manager.cpp  models_manager.cpp.in  (+15 more)
src/netgrowth_cli/: __main__.py  arg_parser.py
src/pymodule/: CMakeLists.txt  _cpp_header.py  setup.py.in
src/pymodule/NetGrowth/: __init__.py  _helpers.py  _helpers_geom.py  _pygrowth.cpp  _pygrowth.pxd  _pygrowth.pyx  dataIO.py  dataIO_dynamics.py  dataIO_rw.py  dataIO_swc.py  graph.py  plot.py  setup.py  utils.py
src/pymodule/NetGrowth/structure/: __init__.py  algorithms.py  containers.py  ensemblerw.py  neuron_shape.py  plot_results.py
src/pymodule/NetGrowth/testing/: __init__.py  test_area_crossing.py  test_persistence.py  test_retraction.py  test_tortuosity_persistence.py  test_wall_affinity.py
src/pymodule/NetGrowth/tools/: __init__.py  tests.py
src/pymodule/dense/: __init__.py  _helpers.py  _helpers_geom.py  _pygrowth.pxd  _pygrowth.pxd.in  _pygrowth.pyx  dataIO.py  dataIO_dynamics.py  dataIO_swc.py  elements.py  graph.py  plot.py  units.py
src/pymodule/dense/geometry/: README.md  __init__.py  backup_shape.py  dxftools.py  geom_utils.py  plot.py  pync_log.py  setup.py  shape.py  shape_io.py  svgtools.py  tools.py
src/pymodule/dense/geometry/dxf_import/: __init__.py  homcoord.py  read_dxf.py
src/pymodule/dense/geometry/examples/: backup_shape.py  culture.dxf  gen_obstacles.py  load_culture.py  load_shapes.py
src/pymodule/dense/io/: __init__.py  dataIO.py  dataIO_dynamics.py  dataIO_swc.py  data_swc.py
src/pymodule/dense/morphology/: __init__.py  algorithms.py  connections.py  graph.py  neuron_shape.py
src/pymodule/dense/plot/: __init__.py  plot_recording.py  plot_structures.py  plot_utils.py
src/pymodule/dense/structure/: __init__.py  algorithms.py  containers.py  ensemblerw.py  plot_results.py
src/pymodule/dense/testing/: test_persistence.py  test_retraction.py  test_wall_affinity.py
src/pymodule/dense/tools/: __init__.py  tests.py
src/spatial/: Area.cpp  Area.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp  Wall.cpp  Wall.hpp  search.cpp  search.hpp
tests/: test_area_crossing.py  test_branching.py  test_create.py  test_delete.py  test_diameter.py  test_examples.py  test_functions.py  test_io.py  test_models.py  test_network.py  test_persistence.py  test_persistence_length.py  test_plots.py  test_properties.py  test_retraction.py  test_tortuosity_persistence.py  test_tutorials.py  test_wall_affinity.py
(+208 files in other folders)
